--- a/HRPWordle1.css
+++ b/HRPWordle1.css
@@ -22,6 +22,12 @@ hr {
     flex-wrap: wrap;
 }
 
+#answer {
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
 .tile {
     /* Box */
     border: 2px solid lightgray;
